<resources>
    <string name="app_name">Wisdom XJTLU</string>
    <string name="main_news">My teaching</string>
    <string name="main_tab_info">Information</string>
    <string name="more">More</string>
    <string name="main_tab_lib">Library</string>
    <string name="main_tab_life">Life</string>
    <string name="main_tab_set">Settings</string>
    <string name="lib_info">About Library</string>
    <string name="lib_lend">Current Borrowing</string>
    <string name="lib_card_lost">Card Loss(Only for library)</string>
    <string name="lib_lecture">Lectures</string>
    <string name="lib_barcode">Bar code scanning</string>
    <string name="lib_mylib">Personal Center</string>
    <string name="lib_myreseave">My Reservation</string>
    <string name="lib_booksMgr">Materials management</string>
    <string name="lib_search">OPAC</string>
    <string name="lib_bookname">Title</string>
    <string name="lib_author">Author</string>
    <string name="lib_bookname_star">Title (*)</string>
    <string name="lib_author_star">Author (*)</string>
    <string name="len_history">Borrowed</string>
    <string name="lib_isbn">ISBN/ISSN</string>
    <string name="name_and_author">Title/Author</string>
    <string name="search">Search</string>
    <string name="scan"> Scan </string>
    <string name="book_detail">Book Details</string>
    <string name="menu_settings">Settings</string>
    <string name="delete_reserve_success">Cancel the reserved book successfully!</string>
    <string name="delete_reserve_fail">Reservation cancelled</string>
    <string name="tab_location">Collections</string>
    <string name="tab_rec">Reservation</string>
    <string name="search_result">Query results</string>
    <string name="search_result_null">The result is null！</string>
    <string name="searchTips">Please enter keywords</string>
    <string name="get_book_code">Barcode</string>
    <string name="res_status">Reservation status</string>
    <string name="res_status_ok">Can make an appointment</string>
    <string name="login_not_null">The user name or password or verify code can not be empty</string>
    <string name="save_info_ok">Login successfully</string>
    <string name="card_no_can_not_be_null">Library card number can not be null</string>
    <string name="lost_success">Report the loss success</string>
    <string name="lost_fail">ID card number input errors</string>
    <string name="school_news">News</string>
    <string name="all_building">Classroom</string>
    <string name="total">Total</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="midnight">Midnight</string>
    <string name="m_type_inner">Internal use</string>
    <string name="m_type_outter">External use</string>
    <string name="m_type_manager">Manager</string>
    <string name="m_t_min">Minutes</string>
    <string name="m_t_hour">Hours</string>
    <string name="m_t_day">Days</string>
    <string name="m_t_week">Weeks</string>
    <string name="media_news">Media Report</string>
    <string name="room_search">Room Search</string>
    <string name="room_book">Room Bookings(For Staff)</string>
    <string name="my_room_book">My Room(For Staff)</string>
    <string name="room_book_success">Book the room successfully</string>
    <string name="room_book_fail">Book the room failed</string>
    <string name="del_book">Cancel an appointment</string>
    <string name="del_book_success">Cancel the room successfully</string>
    <string name="del_book_fail">Cancel the room failed</string>
    <string name="renew_book">Renew</string>
    <string name="load_more">Load More Results...</string>
    <string name="load_ing">Loading···</string>
    <string name="load_full">Complete search</string>
    <string name="load_empty">No items match your search</string>
    <string name="load_error">Loading data error</string>
    <string name="news_pub_time">Released in</string>
    <string name="please_select">Please select</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="process_title"> Processing</string>
    <string name="process_content"> Please wait a moment</string>
    <string name="processing"> Processing, please wait</string>
    <string name="personal">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="now_login">loginning..</string>
    <string name="login_success">Login success</string>
    <string name="login_failed">Username or password is wrong!</string>
    <string name="action_settings">Settings</string>
    <string name="lib_publisher">Publisher</string>
    <string name="lib_publish_time">Publishing Year</string>
    <string name="rec_reason">Suggestion Reasons(Limited in 400 characters)</string>
    <string name="rec_result_ok">You has succeeded in purchase suggestion, thank you for your participation in our library collection building!</string>
    <string name="rec_result_error">Recommended books failure</string>
            <string name="rec_reason_toomany">Sorry. Suggestion Reasons are limited in 400 characters.</string>
    <string name="rec_title">Purchase Suggestion</string>
    <string name="rec_title_null">Please fill the title</string>
    <string name="rec_author_null">Please fill the author</string>
    <string name="please_login">Please login！</string>
    <string name="check_net">Network suck！</string>
    <string name="title_activity_life">LifeActivity</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_success">Clear cache successfully</string>
    <string name="logout">Log out</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="menu_seek">Search</string>
    <string name="menu_way">Way</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_about">Choose Language</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="chang_lang_ok">Change language successfully,please restart this application by click Log out!</string>
    <string name="button_ok">Positioning</string>
    <string name="bus_line">Bus</string>
    <string name="local_food">Restaurant"</string>
    <string name="local_buy">Shopping</string>
    <string name="local_friend">Close friends</string>
    <string name="local_message">Notification Center</string>
    <string name="sorry_no_found">Sorry, no results found</string>
    <string name="book_no_find_recommon">Sorry, No matched item in our OPAC. Whether suggest ordering this book?</string>
    <string name="lend_date">Borrowing date</string>
    <string name="return_date">Return date</string>
    <string name="location">Collection</string>
    <string name="scoolroom">Classroom</string>
    <string name="m_desc">Descriptions(please provide number, requirement and telephone)</string>
    <string name="m_desc_short">Descriptions</string>
    <string name="m_name">Booking Purpose</string>
    <string name="m_longday">Duration</string>
    <string name="m_type">Meetings Types</string>
    <string name="m_time">Booking time</string>
    <string name="book_ok">Reserved successfully! You can check reservation record.</string>
    <string name="book_err">Reserved failed</string>
    <string name="school_tel">Contacts</string>
    <string name="action_news">Activities</string>
    <string name="total_room">Total room:</string>
    <string name="school_map">Campus Map</string>
    <string name="school_info">About XJTLU</string>
    <string name="train_plan">Training Schedule</string>
    <string name="ebsco">Discovery</string>
    <string name="no_app_install">App not installed</string>
    <string name="lib_news">Library News</string>
    <string name="elec">Electronic Location and Access</string>
    <string name="please_intput_id">Please input your ID Card NO:</string>
    <string name="menu_share_loc">位置共享</string>
    <string name="menu_search_route">寻找线路</string>
    <string name="menu_poi_search">附近查找</string>
    <string name="menu_my_loc">当前位置</string>
    <string name="menu_clearn_loc">清空信息</string>
    <string name="menu_return_home">回到首页</string>
    <string name="m">米</string>
    <string name="km">千米</string>
    <string name="poi_type_tip">请输入查询的类别</string>
    <string name="poi_result_tip">抱歉，未找到结果</string>
    <string name="poi_type_edit_tip">输入其他类型</string>
    <string name="poi_type_map">在地图上选取</string>
    <string name="route_dialog_edit_tip">请输入值</string>
    <string name="route_dialog_end_tip">您要找的终点是</string>
    <string name="route_dialog_start_tip">您要找的起点是</string>
    <string name="loc_loading">正在定位</string>
    <string name="route_dialog_transit">公交</string>
    <string name="route_dialog_driving">驾车</string>
    <string name="route_dialog_walk">步行</string>
    <string name="route_dialog_swap">交换</string>
    <string name="route_dialog_set_start">起点设置</string>
    <string name="route_dialog_set_end">终点设置</string>
    <string name="route_dialog_edit_start">输入起点</string>
    <string name="route_dialog_edit_end">输入终点</string>
    <string name="route_dialog_map">地图上的点</string>
    <string name="set_drivingpolicy">设置驾车路线规划策略</string>
    <string name="set_transitpolicy">设置公交路线规划策略</string>
    <string name="policy_EBUS_TIME_FIRST">时间优先</string>
    <string name="policy_EBUS_TRANSFER_FIRST">少换乘</string>
    <string name="policy_EBUS_WALK_FIRST">少步行</string>
    <string name="policy_EBUS_NO_SUBWAY">非地铁</string>
    <string name="policy_ECAR_DIS_FIRST">距离最短</string>
    <string name="policy_ECAR_FEE_FIRST">费用最少</string>
    <string name="policy_tip">请选择路线的搜索方式</string>
    <string name="bus_scheme">公交方案</string>
    <string name="poi_in">在</string>
    <string name="poi_poi">附近找</string>
    <string name="pick_end">选取该点作为终点</string>
    <string name="pick_start">选取该点作为起点</string>
    <string name="pick_point">选取该点</string>
    <string name="renew_ok">Renew OK</string>
    <string name="renew_times">Renew times</string>
    <string name="meeting_name_not_null">Please input Booking Purpose</string>
    <string name="meeting_desc_not_null">Please input Descriptions</string>
    <string name="meeting_dur_not_null">Please input Duration</string>
    <string name="book_date">Reserve time</string>
    <string name="end_date">Deadline time</string>
    <string name="get_book_loc">Fetch Location</string>
    <string name="renew_error">Renew reservation error!</string>
    <string name="lib_ask">Ask Us</string>
    <string name="renren">Ren Ren</string>
    <string name="weibo">sina weibo</string>
    <string name="title_activity_ask">AskActivity</string>
    <string name="ask_phone1">Phone: +86 512 88161290</string>
    <string name="ask_phone2">Phone: +86 512 88161291</string>
    <string name="ask_email">Email:library-service@xjtlu.edu.cn</string>
    <string name="login_tip">Use your library account</string>
    <string name="login_name_hint">Username is your campus email prefix</string>
    <string name="login_pass_hint">Password is your campus email password</string>
    <string name="title_activity_news_index">NewsIndexActivity</string>
    <string name="room_book_not_auth">Sorry. You have no sufficient privileges to book a room</string>
    <string name="news_all">News</string>
    <string name="lost_tip1">Are you sure you want to report the loss? </string>
    <string name="lost_tip2">Once report the loss, the library card will not be able to use</string>
    <string name="lost_tip3">The loss can\'t be cancel by yourself, the librarian will handle it! </string>
    <string name="lib_guides">LibGuides</string>
    <string name="train_res">Training Resources</string>
    <string name="opac">OPAC</string>
    <string name="login_code_hint">Verify Code</string>
</resources>