<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/title_bar_new"
            android:gravity="center_horizontal|center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- Header Ends -->


        <!-- Login Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- student name Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/student_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:hint="@string/login_name_hint"
                android:inputType="text"
                android:singleLine="true" />

            <!-- Password Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/student_passwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/login_pass_hint"
                android:inputType="textPassword"
                android:singleLine="true" />

            <!-- email -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#372c24"
                android:visibility="gone" />

            <EditText
                android:id="@+id/student_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:visibility="gone" />

            <!-- phone -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="#372c24"
                android:visibility="gone" />

            <EditText
                android:id="@+id/student_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="phone"
                android:singleLine="true"
                android:visibility="gone" />

            <!-- Login button -->


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:textColor="#372c24"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/et_login_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:hint="@string/login_code_hint"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:inputType="number" />

                <ImageView
                    android:id="@+id/iv_login_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:layout_gravity="center"
                    android:src="@drawable/about_page_mor"/>

            </LinearLayout>

            <Button
                android:id="@+id/loginOK"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/btn_style_green"
                android:text="@string/ok"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Button
                android:id="@+id/loginCancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/btn_style_red"
                android:text="@string/cancel"
                android:textColor="#fff"
                android:textSize="18sp" />

            <!-- Link to Registration Screen -->

        </LinearLayout>
        <!-- Login Form Ends -->

    </RelativeLayout>

</ScrollView>